@@ -1,5 +1,6 @@
 - parse returns self for chaining
 - find_recursive_makes method
+- as_graph recursive_make, no_rules options
 
 2.008 2020-11-21
 - more accurate deps version
